--- a/_config.yml
+++ b/_config.yml
@@ -5,32 +5,32 @@
 # Site settings
 
 # title of site appears in banner
-title: GH-Pages Collection
+title: New GH-Pages Collection
 # tagline appears in banner
-tagline: a theme for building simple digital exhibits
+tagline: a new theme for building simple digital exhibits
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A more complete description that will appear in meta tags and other locations where appropriate"
 # keywords appear in meta tags
 keywords: "university of idaho, digital collections, digital humanities"
 # creator of the digital collection, to appear in meta tags
-author: evanwill
+author: kitstokes
 # creator contact email for meta tags
 email: ewilliamson@uidaho.edu
 # collection project date, when did you publish this
 collection-date: "2018"
 
 # url is your gh-pages base, username.github.io
-url: https://uidaholib.github.io
+url: https://kitstokes.github.io
 # baseurl is your github repository's name prefixed with a /
-baseurl: /pages-collection
+baseurl: /Test-Collection
 # repository is the github repository's full url
-repository: https://github.com/uidaholib/pages-collection
+repository: https://github.com/uidaholib/Test-Collection
 
 # google services [optional!]
 # leave these blank or comment out to NOT include google code
-google-tracking-id: "UA-74844011-1"
-google-cse-id: "002151703305773322890:1pu3smhw1t8"
+# google-tracking-id: "UA-74844011-1"
+# google-cse-id: "002151703305773322890:1pu3smhw1t8"
 
 # build settings
 permalink: pretty
